--- a/resources/css/main.css
+++ b/resources/css/main.css
@@ -93,8 +93,8 @@ body{
 }
 #barra-menu a{
 	color: #fff;
-	padding: 15px;
-	font-size: 18px;
+	padding: 10px;
+	font-size: 15px;
 }
 #barra-menu a:hover{
 	text-decoration: none;
@@ -123,6 +123,9 @@ body{
 	box-shadow: #ccc 1px 1px 1px 1px;
 	padding: 0px;
 }
+.entradas-inicio .entrada h6{
+	margin: 10px;
+}
 .entradas-inicio .inicio-post .entrada img{
 	width: 100%;
 	position: relative;
@@ -132,12 +135,23 @@ body{
 .entradas-inicio .inicio-post .entrada .imagen{
 	width: 100%;
 	max-width: 100%;
+	height: 120px;
+}
+.entradas-inicio .inicio-post .entrada .imagen h3 a{
+	color: #fff;
 }
 .entradas-inicio .inicio-post .barra-nav-publicaciones{
 	margin-top: 10px;
 	height: 250px;
 	background-color: #2C3E50;
 	box-shadow: #ccc 1px 1px 1px 1px;
+}
+.lista-tags{
+	margin: 5px;
+}
+.lista-tags li{
+	display: inline-block;
+	padding: 5px;
 }
 .btn-amarillo p{
 	margin-bottom: -5px;
@@ -151,3 +165,28 @@ body{
 	max-width: 330px;
 	margin: 0 auto;
 }
+
+
+/*
+* Codigo usuario profile
+*/
+
+.p-usuario{
+	background-color: #E74C3C;
+	height: 200px;
+	border-radius: 10px;
+	margin: 10px;
+	width: 30%;
+}
+.p-usuario-texto{
+	height: 70%;
+	background-color: #fff;
+	width: 100%;
+	border-style: solid;
+	border-color: #ccc;
+	border-radius: 0px 0px 10px 10px;
+}
+
+/* 
+* codigo de los articulos
+*/
